--- a/Clicker 2.0/game.html
+++ b/Clicker 2.0/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Click The Banana -- Play</title>
+    <title>Click The Corgi -- Play</title>
     <style>
       html,
       body {
@@ -23,7 +23,7 @@
       }
     </style>
   </head>
-  <body oncontextmenu="return false;">
+  <body>
     <script src="game.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
   </body>
